--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="./images/manning.webp" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
           </div>
           <div class="col-lg-6">
-            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Omaha!!! <br>Set, Hut, Eightyyy...</h1>
+            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 h1">Omaha!!! <br>Set, Hut, Eightyyy...</h1>
             <p class="lead">You find a place to know a bit more of NFL!<br>Here you will find a big picture of what is this footbal profissional league in USA!<br>Enjoy!
             </p>
             
